# digitizer-prototype

./: .gitattributes  .gitignore  README.md  prototype.ipynb  stylus-filtering.ipynb  touch-detection.ipynb  touch-extraction.ipynb  touch-label.py  touch-processor-clustermle.py  touch-processor.py
cpp/: .gitignore  meson.build  meson_options.txt
cpp/src/: cairo.hpp  cmap.hpp  compiler.hpp  control.c  control.h  ipts.h  kernels.hpp  main.cpp  math.hpp  parser.hpp  processor.cpp  processor.hpp  proto-plot.cpp  proto-rt.cpp  types.hpp  utils.c  utils.h  visualization.cpp  visualization.hpp
cpp/src/algorithm/: border.hpp  convolution.hpp  convolution.opt.3x3-extend.hpp  convolution.opt.5x5-extend.hpp  distance_transform.hpp  gaussian_fitting.hpp  hessian.hpp  hessian.opt.zero.hpp  label.hpp  local_maxima.hpp  structure_tensor.hpp  structure_tensor.opt.3x3-zero.hpp
cpp/src/algorithm/opt/: convolution.3x3-extend.hpp  convolution.5x5-extend.hpp  hessian.zero.hpp  structure_tensor.3x3-zero.hpp
cpp/src/algorithms/: border.hpp  convolution.hpp  convolution.opt.3x3-extend.hpp  convolution.opt.5x5-extend.hpp  convolution.opt.hpp  distance_transform.hpp  gaussian_fitting.hpp  hessian.hpp  hessian.opt.hpp  hessian.opt.zero.hpp  label.hpp  local_maxima.hpp  structure_tensor.hpp  structure_tensor.opt.3x3-zero.hpp  structure_tensor.opt.hpp
cpp/src/container/: image.hpp  kernel.hpp  ops.hpp
cpp/src/eval/: perf.hpp
cpp/src/gfx/: cairo.hpp  cmap.hpp  color.hpp  gdk.hpp  gtk.hpp
cpp/src/math/: mat2.hpp  mat6.hpp  num.hpp  poly2.hpp  sle6.hpp  vec2.hpp  vec6.hpp
cpp/src/utils/: access.hpp
data/: stylus-sb2_13-1.iptsraw  touch-sb2_13-hand-1.iptsraw  touch-sb2_13-writing-1.iptsraw
notebooks/: ipts-data.ipynb  stylus-filtering.ipynb  touch-detection.ipynb  touch-extraction.ipynb
scripts/: touch-detect.py  touch-grad.py  touch-label.py  touch-processor-clustermle.py  touch-processor-prep.py  touch-processor.py  touch-ridge.py  touch-rot.py
utils/: libipts.py
